// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getArticle should dispatch the articleLoadingError action if api requests failed 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "https://conduit.productionready.io/api/articles/sample-slug",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getArticle should dispatch the articleLoadingError action if api requests failed 2`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "slug": "sample-slug",
      "type": "app/Article/GET_ARTICLE_SLUG",
    },
    "channel": null,
  },
}
`;

exports[`getArticle should dispatch the articleLoadingError action if api requests failed 3`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "article": undefined,
      "type": "app/Article/ARTICLE_LOADED",
    },
    "channel": null,
  },
}
`;

exports[`getComments should dispatch the commentsLoadingError action if api requests failed 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "https://conduit.productionready.io/api/articles/sample-slug/comments",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`getComments should dispatch the commentsLoadingError action if api requests failed 2`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "comments": undefined,
      "type": "app/Article/COMMENTS_LOADED",
    },
    "channel": null,
  },
}
`;
